tests/error/modifier_errors/flag_dagger_assign.err
Error: Invalid expression in dagger (at $FILE:7:4)
  | 
5 | @guppy(dagger=True)
6 | def test() -> None:
7 |     x = 3
  |     ^^^^^ Assignment found in a dagger context

Guppy compilation failed due to 1 previous error
